---------------------------------------------------------------------------------------------------
Version: 0.0.44
  Changes:
	- Removed duplicate pyht circuits
---------------------------------------------------------------------------------------------------
Version: 0.0.43
  Changes:
	- corrected bio industries dependency number
	- fixed? error with offshore pump when bob electronics and pyht loaded
---------------------------------------------------------------------------------------------------
Version: 0.0.41
  Changes:
	- added check for pyfusion with bobs mods active
	- added check for bio-processing refer being enabled
	- fixed errror for py+angel balance uberhaul
---------------------------------------------------------------------------------------------------
Version: 0.0.40
  Changes:
	- added all pyro ores to omnimatter
	- fixed issues with recycled factory and madclowns mods with pycoaltbaa
---------------------------------------------------------------------------------------------------
Version: 0.0.39
  Changes:
	- merged several sodium products from pyrawores and angels mods
	- fixed issue with compressor needing t3 items to make t3 sci pack	
	- removed duplicate items from several recipes
	- fixed issues with omni mods not loading with pymods
---------------------------------------------------------------------------------------------------
Version: 0.0.38
  Changes:
	- added checks for pyro in override code for bob mod changes
	- added item migration file to convert any bob ores to pyro ores
	- merged molten metals and gases of pyro and angel mods
---------------------------------------------------------------------------------------------------
Version: 0.0.37
  Changes:
	- removed a number of duplicaled items from recipes
	- fixed a missing check for angels bioprocessing
	- fixed that some recipes hadnt been transfered to a different building with the removeal of bobs electrolysers