@@ -1,6 +1,6 @@
 {
 	"name": "PyCoalTBaA",
-	"version": "0.0.43",
+	"version": "0.0.44",
 	"factorio_version": "0.17",
 	"title": "PyCoal Touched By an Angel",
 	"author": "KingArthur",
