@@ -2,6 +2,10 @@
 Version: 0.0.44
   Changes:
 	- Removed duplicate pyht circuits
+	- fixed deadlock start with aai industry
+	- removed steel bearings from crystal miner if pyro is active
+	- corrected raw wood name in recipe for madclowns + py
+	- removed duplicate glass from nursery when pyro is activate
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.43
   Changes:
